# carrot-switch

./: .gitignore  README.md  agents.md  build.ps1  package.json  pyproject.toml  version.json
.github/workflows/: ci.yml  release.yml
desktop/CarrotSwitch/: App.xaml  App.xaml.cs  CarrotSwitch.csproj  MainWindow.xaml  MainWindow.xaml.cs
frontend/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  app.css  main.ts  vite-env.d.ts
frontend/src/lib/: api.ts  types.ts
server/: bunfig.toml  package.json  tsconfig.json
server/src/: index.ts
server/src/__tests__/: agent-crud-all-agents.test.ts  agent-mcp-sync.test.ts  agent-mcp.test.ts  agent-skill-sync.test.ts  agent-skill.test.ts  api-crud.test.ts  api-mcp-toggle.test.ts  api.test.ts  backup.test.ts  builtin-skill-persistence.test.ts  builtin-skills.test.ts  claude-format.test.ts  claude-module.test.ts  config-all.test.ts  config-base.test.ts  helpers.ts  import-all-agents.test.ts  jsonc.test.ts  logger.test.ts  mimocode-module.test.ts  opencode.test.ts  repository-mcp.test.ts  repository-skill.test.ts  setup.ts  shared-api-consistency.test.ts  skill-enable-persistence.test.ts  skill-install-zip.test.ts  skill-manager.test.ts  skill-paths-list.test.ts  skill-paths.test.ts  (+2 more)
shared/: package.json
shared/src/: api.ts  types.ts
src/carrot_switch/: __init__.py  __main__.py  backup.py  cli.py
tests/: conftest.py  test_api.py  test_backup.py  test_config.py  test_integration.py  test_mimocode.py  test_opencode.py  test_skill_manager.py  test_skill_paths.py
(+48 files in other folders)
