[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "carrot-switch"
version = "0.1.0"
description = "Agent Plugin Manager for OpenCode and MiMoCode"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pywebview>=5.0",
]

[project.scripts]
carrot-switch = "carrot_switch.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/carrot_switch"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.0",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
