[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "carrot-switch"
version = "0.1.0"
description = "Agent Plugin Manager for OpenCode, MiMoCode and Claude Code"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pywebview>=5.0",
]

[project.scripts]
carrot-switch = "carrot_switch.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/carrot_switch"]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.3.0",
    "httpx>=0.28.0",
]
